--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,9 +13,10 @@ log = "0.4"
 pretty_env_logger = "0.5"
 linked-hash-map = "0.5"
 once_cell = "1.19"
-parking_lot = "0.12"
+parking_lot = { version = "0.12", features = ["serde"] }
 bytes = { version = "1.2", features = ["serde"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 rand = { version = "0.8" }
 gpw = "0.1"
 actix = "0.13"
