--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ bat = "0.24"
 syntect = "5.1"
 tokio = { version = "1.35", features = ["sync"] }
 futures = "0.3"
+sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
 
 [profile.release]
 lto = true
