--- a/bin-api.service
+++ b/bin-api.service
@@ -10,8 +10,8 @@ Restart=on-failure
 RestartSec=5s
 StartLimitBurst=3
 StartLimitInterval=0
-User=atlas
-Group=atlas
+User=sanjay
+Group=sanjay
 
 StandardOutput=append:/var/log/bin-api/output.log
 StandardError=append:/var/log/bin-api/error.log
