--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,7 +27,8 @@ bat = "0.24"
 syntect = "5.1"
 tokio = { version = "1.35", features = ["sync"] }
 futures = "0.3"
-sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls"] }
+sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
+chrono = "0.4"
 
 [profile.release]
 lto = true
