--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,6 +29,7 @@ tokio = { version = "1.35", features = ["sync"] }
 futures = "0.3"
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
 chrono = "0.4"
+actix-files = "0.6.6"
 
 [profile.release]
 lto = true
