--- a/Cargo.toml
+++ b/Cargo.toml
@@ -30,6 +30,7 @@ futures = "0.3"
 sqlx = { version = "0.7", features = ["sqlite", "runtime-tokio-native-tls", "chrono"] }
 chrono = "0.4"
 actix-files = "0.6.6"
+rust-embed = "8.7.0"
 
 [profile.release]
 lto = true
